exports[`Storyshots Brand default 1`] = `
<span
  className="Brand">
  Ojek 
  <i
    aria-hidden="true"
    className="fa fa-motorcycle" />
  <i
    aria-hidden="true"
    className="fa fa-shopping-cart" />
   Belanja
</span>
`;

exports[`Storyshots Button icon 1`] = `
<div
  style={
    Object {
      "width": 200,
    }
  }>
  <button
    className="Button Button-icon Button-secondary"
    disabled={true}
    onClick={[Function]}
    title="Hapus"
    type="button">
    <i
      aria-hidden="true"
      className="fa fa-trash fa-lg" />
  </button>
</div>
`;

exports[`Storyshots Button text 1`] = `
<div
  style={
    Object {
      "width": 200,
    }
  }>
  <button
    className="Button Button-fullwidth"
    disabled={false}
    onClick={[Function]}
    title=""
    type="button">
    <i
      aria-hidden="true"
      className="fa fa-shopping-cart fa-lg" />
     Beli
  </button>
</div>
`;

exports[`Storyshots DescriptionList default 1`] = `
<dl
  className="DescriptionList">
  <dt>
    No. Pesanan
  </dt>
  <dd>
    -
  </dd>
  <dt>
    Nama
  </dt>
  <dd>
    Zain Fathoni
  </dd>
</dl>
`;
